--- a/regression.ipynb
+++ b/regression.ipynb
@@ -62,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing lab/regression.cpp\n"
+      "Overwriting lab/regression.cpp\n"
      ]
     }
    ],
@@ -100,6 +100,18 @@
     "\n",
     "using namespace sycl;\n",
     "\n",
+    "// we create a custom pow function because GPU doesnt know default pow function\n",
+    "double pow(double base_unit, double power_unit){\n",
+    "    double result=base_unit;\n",
+    "    int i=1;\n",
+    "    while(i<power_unit){\n",
+    "        result=result*base_unit;\n",
+    "        i++;\n",
+    "    }\n",
+    "    \n",
+    "  return result;  \n",
+    "}\n",
+    "\n",
     "\n",
     "\n",
     "int main() {\n",
@@ -108,7 +120,14 @@
     "    //N specifies the numbe of values in your dataset.\n",
     "    \n",
     "    constexpr int N=6; \n",
-    "    queue q(cpu_selector{});\n",
+    "    \n",
+    "    // if you select a GPU device than Device: Intel(R) Graphics Gen9 [0x3e96] will process in 1 second.\n",
+    "     queue q(gpu_selector{});\n",
+    "    \n",
+    "    //if you select a CPU device than Device: Intel(R) Xeon(R) E-2176G CPU @ 3.70GHz will process in 3 seconds.\n",
+    "    //to use cpu un comment the below and comment the above.\n",
+    "    //queue q(cpu_selector{});\n",
+    "    \n",
     "    std::cout << \"Device: \" << q.get_device().get_info<info::device::name>() << std::endl;\n",
     "\n",
     "\n",
@@ -262,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -276,33 +295,33 @@
       "\n",
       "Job ID                    Name             User            Time Use S Queue\n",
       "------------------------- ---------------- --------------- -------- - -----\n",
-      "796865.v-qsvr-1            ...ub-singleuser u60146          00:00:18 R jupyterhub     \n",
-      "796867.v-qsvr-1            ...regression.sh u60146                 0 Q batch          \n",
+      "798469.v-qsvr-1            ...ub-singleuser u60146          00:00:45 R jupyterhub     \n",
+      "798480.v-qsvr-1            ...regression.sh u60146                 0 Q batch          \n",
       "\n",
-      "Waiting for Output ████████████████████████████████ Done⬇\n",
+      "Waiting for Output █████████████████████ Done⬇\n",
       "\n",
       "########################################################################\n",
-      "#      Date:           Wed Feb 17 21:05:41 PST 2021\n",
-      "#    Job ID:           796867.v-qsvr-1.aidevcloud\n",
+      "#      Date:           Sun 21 Feb 2021 12:08:35 AM PST\n",
+      "#    Job ID:           798480.v-qsvr-1.aidevcloud\n",
       "#      User:           u60146\n",
-      "# Resources:           neednodes=1:ppn=2,nodes=1:ppn=2,walltime=06:00:00\n",
+      "# Resources:           neednodes=1:gpu:ppn=2:gen9,nodes=1:gpu:ppn=2:gen9,walltime=06:00:00\n",
       "########################################################################\n",
       "\n",
       "## u60146 is compiling your interest on account audit program.\n",
-      "Device: Intel(R) Xeon(R) Gold 6128 CPU @ 3.40GHz\n",
+      "Device: Intel(R) Graphics Gen9 [0x3e96]\n",
       "Parallel data processing initialized\n",
       "Proceeding to output results to txt file \n",
       " \n",
       " \n",
       "Processing complete you can now refer to the regression.txt  on the left hand side in jupyter notebook\n",
-      "The Processing was completed in  2 seconds\n",
+      "The Processing was completed in  1 seconds\n",
       "\n",
       "########################################################################\n",
-      "# End of output for job 796867.v-qsvr-1.aidevcloud\n",
-      "# Date: Wed Feb 17 21:06:02 PST 2021\n",
+      "# End of output for job 798480.v-qsvr-1.aidevcloud\n",
+      "# Date: Sun 21 Feb 2021 12:08:50 AM PST\n",
       "########################################################################\n",
       "\n",
-      "Job Completed in 32 seconds.\n"
+      "Job Completed in 21 seconds.\n"
      ]
     }
    ],
